--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -3,3 +3,9 @@
 
 @import "app";
 @import "backgrounds";
+@import "footer";
+@import "header";
+@import "myth-cards";
+@import "myth-explorer";
+@import "start-cards-by-type";
+@import "start-page-card";
