--- a/src/templates/app/app.html
+++ b/src/templates/app/app.html
@@ -1,26 +1,30 @@
 
-  <div class="bg-container">
-    <div class="backgrounds" bgs-background></div>
-  </div>
-       <!--bgs-background></div>-->
+<div class="header-container">
+  <div bgs-header-bar></div>
+</div>
 
-  <!--<div class="app-sized-div">-->
+<div class="start-page-card-container">
+  <div bgs-start-page-card></div>
+</div>
 
-    <!--<div id="backgrounds"-->
-         <!--ng-controller="bgsBackgroundController as bkgrdCtrl"-->
-         <!--ng-include="templateHTML"-->
-         <!--class="app-sized-div zz-bottom" >-->
-    <!--</div>-->
+<!--<div class="myth-explorer-container">-->
+  <!--<div bgs-myth-explorer></div>-->
+<!--</div>-->
 
-    <!--<div bgs-background></div>-->
+<div class="start-cards-by-type-container">
+  <div bgs-start-cards-by-type></div>
+</div>
 
-    <!--<div id="headerBar"-->
-         <!--ng-controller="HeaderBarController"-->
-         <!--ng-init="init()"-->
-         <!--ng-include="templateHTML"-->
-         <!--class="app-sized-div z-100"-->
-         <!--style="height: 65px">-->
-    <!--</div>-->
+<div class="bg-container">
+  <div bgs-background></div>
+</div>
+
+<div class="footer-container">
+  <div bgs-footer-bar></div>
+</div>
+
+
+
 
     <!--<div id="mythExplorer"-->
          <!--ng-controller="MythExplorerController"-->
@@ -45,13 +49,3 @@
          <!--ng-hide="isHidden"-->
          <!--class="app-sized-div z-10" >-->
     <!--</div>-->
-
-    <!--<div id="footerBarDiv"-->
-         <!--ng-controller="FooterBarController"-->
-         <!--ng-init="init()"-->
-         <!--ng-include="templateHTML"-->
-         <!--ng-hide="isHidden"-->
-         <!--class="app-sized-div z-110"-->
-         <!--style="top:570px; height: 65px">-->
-    <!--</div>-->
-
