--- a/src/templates/backgrounds/backgrounds-tmpl.html
+++ b/src/templates/backgrounds/backgrounds-tmpl.html
@@ -1,6 +1,7 @@
 
-  <!--<div class="startPageBackgroundFloor"-->
-  <!--ng-class="{'bottomRaysAnime': bkgrdCtrl.showBackground}"></div>-->
+<div class="backgrounds">
+  <div class="horizon"
+       ng-class="{'bkgrndAnime': bkgrdCtrl.showBackground}"></div>
 
   <div class="horizon-container">
     <div class="gradient-top"
@@ -15,15 +16,4 @@
     <div class="raysBottom"
          ng-class="{'bottomRaysAnime': bkgrdCtrl.showBackground}"></div>
   </div>
-
-
-
-
-
-  <!--<div class="raysTop"-->
-     <!--ng-class="{'bkgrndAnime': bkgrdCtrl.showBackground}"></div>-->
-
-<!--<div class="raysBottom"-->
-     <!--ng-class="{'bottomRaysAnime': bkgrdCtrl.showBackground}"></div>-->
-
-
+</div>
