--- a/src/templates/footerBar/footer-bar-tmpl.html
+++ b/src/templates/footerBar/footer-bar-tmpl.html
@@ -1,5 +1,6 @@
 
-<div id="footerBar"
+<div class="footer-bar-container"
+     ng-class="{'bgsFooterAnimation': footerCtrl.showFooter}"
      ng-click="onClick()"
      ng-mouseover="onMouseOver()"
      ng-mouseout="onMouseOut()">
