--- a/src/assets/sass/backgrounds.scss
+++ b/src/assets/sass/backgrounds.scss
@@ -45,13 +45,13 @@
     margin-right: auto;
     margin-left: auto;
     top: 0;
-    left: -40%;
+    left: -25%;
     height: 150%;
-    width: 200%;
+    width: 150%;
     background-image: url("../assets/images/bgRaysTopReflection.png");
     background-repeat: no-repeat;
     background-size: 100%;
-    //  background-position: left top;
+    background-position: center 0;
     opacity: 0;
     z-index: 2;
   }
@@ -59,39 +59,23 @@
 //    border: 10px solid #84dbfb;
 }
 
-
-
-
-.startPageBackgroundTop{
-  @include  flex();
-  top: 0px;
-  height: 300px;
-  width: 980px;
-  background-image: url("../assets/images/bgTop.jpg");
-  background-repeat: no-repeat;
-  background-position: left top;
-  background-color: transparent;
-  opacity: 0;
-  z-index: 5;
-}
-
-.startPageBackgroundFloor{
+.horizon {
   position: fixed;
-  margin-right: auto;
-  margin-left: auto;
-  top: 300px;
-  height: 100%;
-  width: 980px;
-  background-image: url("../assets/images/bgBottom.jpg");
-  background-repeat: no-repeat;
-  background-position: left top;
-  background-color: transparent;
   opacity: 0;
-  z-index: 4;
+  z-index: 3;
+  height: 50px;
+  width: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  background: -moz-linear-gradient(top,  rgba(0,53,63,0) 0%, rgba(0,53,63,1) 50%, rgba(0,53,63,0) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,53,63,0)), color-stop(50%,rgba(0,53,63,1)), color-stop(100%,rgba(0,53,63,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(0,53,63,0) 0%,rgba(0,53,63,1) 50%,rgba(0,53,63,0) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(0,53,63,0) 0%,rgba(0,53,63,1) 50%,rgba(0,53,63,0) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(0,53,63,0) 0%,rgba(0,53,63,1) 50%,rgba(0,53,63,0) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(0,53,63,0) 0%,rgba(0,53,63,1) 50%,rgba(0,53,63,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0000353f', endColorstr='#0000353f',GradientType=0 ); /* IE6-9 */
+
 }
-
-
-
 
 
 
