--- a/src/templates/app/app.html
+++ b/src/templates/app/app.html
@@ -6,10 +6,12 @@
     <h1>GOTCHA</h1>
 
     <!--<div id="backgrounds"-->
-         <!--ng-controller="BackgroundsController"-->
+         <!--ng-controller="bgsBackgroundController as bkgrdCtrl"-->
          <!--ng-include="templateHTML"-->
          <!--class="app-sized-div zz-bottom" >-->
     <!--</div>-->
+
+    <div bgs-background></div>
 
     <!--<div id="headerBar"-->
          <!--ng-controller="HeaderBarController"-->
