--- a/src/assets/less/app/backgrounds.less
+++ b/src/assets/less/app/backgrounds.less
@@ -9,7 +9,7 @@
     top: 0px;
     height: 300px;
     width: 980px;
-    background-image: url("../assets/images/bgTop.png");
+    background-image: url("../assets/images/bgTop.jpg");
     background-repeat: no-repeat;
     background-position: left top;
     background-color: #000000;
@@ -23,7 +23,7 @@
     top: 300px;
     height: 100%;
     width: 980px;
-    background-image: url("../assets/images/bgBottom.png");
+    background-image: url("../assets/images/bgBottom.jpg");
     background-repeat: no-repeat;
     background-position: left top;
     background-color: #000000;
@@ -37,7 +37,7 @@
     top: 0px;
     height: 300px;
     width: 980px;
-    background-image: url("../assets/images/bgRaysTop.png");
+    background-image: url("../assets/images/bgRaysTop.jpg");
     background-repeat: no-repeat;
     background-position: left top;
     z-index: -110;
@@ -57,11 +57,13 @@
 }
 
 
-#mythExplorerBackground{
+.mythExplorerBackground{
     position: fixed;
     top:0;
     left:0;
-    width: 2000px;
+    width: 100%;
+    height: 100%;
+
     /* Safari 4-5, Chrome 1-9 */
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#000418), to(#3f608a));
 
