--- a/src/templates/backgrounds/backgrounds-tmpl.html
+++ b/src/templates/backgrounds/backgrounds-tmpl.html
@@ -1,16 +1,18 @@
 
 
+<h5>BACKGROUNDS</h5>
 
-<div id=mythExplorerBackground
-     class="z--30"
-     style="width: 100%; height: 100%"
-     ng-show="showMythExplorerBackground"></div>
+<button ng-click="bkgrdCtrl.CLICK()">CLICK!!</button>
+
+<div class="mythExplorerBackground z--30"
+     ng-class="{'fader': bkgrdCtrl.showBackground}"></div>
 
 
 <!--
 <div id=raysBackground
      ng-show="showStartPageBackground"></div>
--->
+
+
 <div id="startPageBackgroundTop"
      class="z--70"
      ng-show="showStartPageBackground"></div>
@@ -28,3 +30,5 @@
 <div id=raysBottom
      class="z--40"
      ng-show="showStartPageBackground"></div>
+
+     -->
