--- a/src/assets/sass/start-page-card.scss
+++ b/src/assets/sass/start-page-card.scss
@@ -62,7 +62,10 @@
   position:relative;
   display: block;
 
-  top: 73%;
+  cursor: pointer;
+  cursor: hand;
+
+  top: 75%;
 
   height: 30px;
   width: 160px;
